force-app/main/default/objects/Order/fields/Enable_Update_Account__c.field-meta.xml
<CustomField>
    <fullName>Enable_Update_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Update Account</label>
    <type>Checkbox</type>
</CustomField>