force-app/main/default/objects/Order/fields/External_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Order Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>