force-app/main/default/objects/Order/validationRules/Cannot_change_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Account</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( AccountId ) &amp;&amp;  Enable_Update_Account__c  &lt;&gt; true</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please use the Update Account component to change the Account.</errorMessage>
</ValidationRule>