force-app/main/default/objects/Order/validationRules/Change_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Status</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp;  TEXT(PRIORVALUE(Status)) = &quot;Activated&quot; &amp;&amp; LastModifiedBy.UserRole.Name &lt;&gt; &quot;Manager&quot;</errorConditionFormula>
    <errorMessage>Only Managers can deactivate Orders.</errorMessage>
</ValidationRule>