force-app/main/default/objects/Order/validationRules/Order_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Activated&quot;) &amp;&amp;  LastModifiedBy.UserRole.Name &lt;&gt; &quot;Manager&quot; &amp;&amp;  NOT(ISCHANGED(Status) )</errorConditionFormula>
    <errorMessage>You cannot make changes, Order is already Activated.</errorMessage>
</ValidationRule>